Jason's first update

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-this is html file.
+<!DOCTYPE html>
+<html lang ="en">
+	<head>
+		<title>Team 13 project 1 </title>
+		<meta charset="utf-8"/>
+	</head>
+
+
+	<body>
+		<h1>Just Random html text</h1>
+		<h2>Ricky Choi and Jason Jin</h2>
+
+
+
+	</body>
