added Ricky's name

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-this is html file.
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8"/>
+    <title>This is our app</title>
+  </head>
+  <body>
+    <p>Project Manager: Ricky Choi</p>
+  </body>
+</html>
