--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Team 13 Project 1</title>
   </head>
   <body>
+  	<p>Buy & Sell app</p>
     <p>Project Manager: Ricky Choi</p>
     <p>Designer: Jason Jin</p>
   </body>
