--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Team 13 Project 1</title>
   </head>
   <body>
-    <p>Project Manager: Ricky Choi</p>
-    <p>Designer: Jason Jin</p>
+    <h1>This is BCIT Buy & Sell Program!</h1>
+      <p>Project Manager: Ricky Choi</p>
+      <p>Designer: Jason Jin</p>
   </body>
 </html>
