--- a/scripts/mainHome.html
+++ b/scripts/mainHome.html
@@ -3,9 +3,68 @@
   <head>
     <meta charset="utf-8"/>
     <title>Main Home</title>
+    <style>
+      body {
+        margin: 0;
+      }
+      #header {
+        border: 1px solid black;
+        width: 100%;
+        height: 70px;
+        display: table;
+      }
+      #iconsWrapper {
+        display: table-cell;
+        vertical-align: middle;
+        padding: 0 10px;
+        text-align: center;
+      }
+      .icons {
+        width: 40px;
+        height: auto;
+        margin: 0 10px;
+      }
+      #menuIcon {
+        float: left;
+      }
+      #searchIcon {
+        float: right;
+      }
+      #messageIcon {
+        float: right;
+      }
+      #logo {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        background-color: yellow;
+        display: inline-block;
+      }
+      .posts {
+        width: 100%;
+      }
+
+      /** (mobile) For 480px or less **/
+      @media screen and (max-width: 480px) {
+
+      }
+    </style>
   </head>
   <body>
-    <h1>This is main home</h1>
-    <p>and some posts...</p>
+    <div id="content">
+      <div id="header">
+        <div id="iconsWrapper">
+          <a href="#"><img src="../assets/icons/menu.png" alt="menu icon" class="icons" id="menuIcon"/></a>
+          <a href="#"><div id="logo"></div></a>
+          <a href="#"><img src="../assets/icons/envelope.png" alt="message icon" class="icons" id="messageIcon"/></a>
+          <a href="#"><img src="../assets/icons/search.png" alt="search icon" class="icons" id="searchIcon"/></a>
+        </div>
+      </div>
+      <div id="main">
+        <div class="posts">
+
+        </div>
+      </div>
+    </div>
   </body>
 </html>
