--- a/scripts/loginForm.html
+++ b/scripts/loginForm.html
@@ -4,7 +4,7 @@
 	<title>
 		Login
 	</title>
-	<meta charset="utf-8">
+	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="../style/loginStyle.css"/>
 </head>
 <body>
@@ -17,12 +17,10 @@
 			<li><button>Log in</li>
 		</ul>
 		<div>
-			<a href="#">Create an acoount</a>
-			<a href="#">Forgot your password?</a>
+			<p><a href="#">Create an acoount</a></p>
+			<p><a href="#">Forgot your password?</a></p>
 		</div>
 
 	</section>
-
-	<h1>test</h1>
 </body>
 </html>
