--- a/scripts/mainHome.html
+++ b/scripts/mainHome.html
@@ -2,27 +2,27 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Home</title>
     <style>
       body {
         margin: 0;
+        background-color: rgb(189, 204, 255);
       }
       #header {
-        border: 1px solid black;
+        background-color: #ffffff;
         width: 100%;
-        height: 70px;
-        display: table;
+        height: 80px;
+        z-index: 20001;
       }
       #iconsWrapper {
-        display: table-cell;
-        vertical-align: middle;
         padding: 0 10px;
         text-align: center;
       }
       .icons {
         width: 40px;
         height: auto;
-        margin: 0 10px;
+        margin: 20px 10px;
       }
       #menuIcon {
         float: left;
@@ -37,11 +37,29 @@
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        background-color: yellow;
+        background-color: #0E2577;
         display: inline-block;
+        position: absolute;
+        left: 155px;
+        margin: 20px
+      }
+      #main {
+        background-color: rgb(189, 204, 255);
+        height: 100%;
       }
       .posts {
-        width: 100%;
+        width: 330px;
+        height: 250px;
+        background-color: #ffffff;
+        margin: 20px auto;
+        padding-top: 14px;
+      }
+
+      .postsImage {
+        width: 300px;
+        height: 170px;
+        border: 1px solid black;
+        margin: 0px auto;
       }
 
       /** (mobile) For 480px or less **/
@@ -62,8 +80,20 @@
       </div>
       <div id="main">
         <div class="posts">
-
+          <div class="postsImage">
+          </div>
+          <p>asdfasdf</p>
         </div>
+        <div class="posts">
+            <div class="postsImage">
+            </div>
+            <p>asdfasdf</p>
+          </div>
+          <div class="posts">
+              <div class="postsImage">
+              </div>
+              <p>asdfasdf</p>
+            </div>
       </div>
     </div>
   </body>
