--- a/scripts/Sidebar.html
+++ b/scripts/Sidebar.html
@@ -5,7 +5,7 @@
 		
 	</title>
 	<meta charset="utf-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="../style/sidebarStyle.css">
 	<script type="text/javascript" src=./sidebar_script.js></script>
 </head>
@@ -21,9 +21,11 @@
 			</a>
 		</div>
 		<ul>
-			<li><a href="#">Account</a></li>
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Log out</a></li>
+			<li><a href="#">Explore Posts</a></li>
+			<li><a href="#">Create a Post</a></li>
+			<li><a href="#">My Posts</a></li>
+			<li><a href="#">Log Out</a></li>
+			<li><a href="#">Account Setting</a></li>
 		</ul>
 	</div>
 </body>
