--- a/scripts/mainHome.html
+++ b/scripts/mainHome.html
@@ -1,100 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Home</title>
-    <style>
-      body {
-        margin: 0;
-        background-color: rgb(189, 204, 255);
-      }
-      #header {
-        background-color: #ffffff;
-        width: 100%;
-        height: 80px;
-        z-index: 20001;
-      }
-      #iconsWrapper {
-        padding: 0 10px;
-        text-align: center;
-      }
-      .icons {
-        width: 40px;
-        height: auto;
-        margin: 20px 10px;
-      }
-      #menuIcon {
-        float: left;
-      }
-      #searchIcon {
-        float: right;
-      }
-      #messageIcon {
-        float: right;
-      }
-      #logo {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: #0E2577;
-        display: inline-block;
-        position: absolute;
-        left: 155px;
-        margin: 20px
-      }
-      #main {
-        background-color: rgb(189, 204, 255);
-        height: 100%;
-      }
-      .posts {
-        width: 330px;
-        height: 250px;
-        background-color: #ffffff;
-        margin: 20px auto;
-        padding-top: 14px;
-      }
 
-      .postsImage {
-        width: 300px;
-        height: 170px;
-        border: 1px solid black;
-        margin: 0px auto;
-      }
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="../style/sidebarStyle.css">
+  <script type="text/javascript" src=./sidebar_script.js></script>
+  <title>Main Home</title>
+  <style>
+    body {
+      margin: 0;
+      background-color: rgb(189, 204, 255);
+    }
 
-      /** (mobile) For 480px or less **/
-      @media screen and (max-width: 480px) {
+    #header {
+      background-color: #ffffff;
+      width: 100%;
+      height: 80px;
+      z-index: 50;
+      top: 0;
+      position: fixed;
+    }
 
-      }
-    </style>
-  </head>
-  <body>
-    <div id="content">
-      <div id="header">
-        <div id="iconsWrapper">
-          <a href="#"><img src="../assets/icons/menu.png" alt="menu icon" class="icons" id="menuIcon"/></a>
-          <a href="#"><div id="logo"></div></a>
-          <a href="#"><img src="../assets/icons/envelope.png" alt="message icon" class="icons" id="messageIcon"/></a>
-          <a href="#"><img src="../assets/icons/search.png" alt="search icon" class="icons" id="searchIcon"/></a>
-        </div>
-      </div>
-      <div id="main">
-        <div class="posts">
-          <div class="postsImage">
+    #iconsWrapper {
+      padding: 0 10px;
+      text-align: center;
+    }
+
+    .icons {
+      width: 40px;
+      height: auto;
+      margin: 20px 10px;
+    }
+
+    #menuIcon {
+      float: left;
+    }
+
+    #searchIcon {
+      float: right;
+    }
+
+    #messageIcon {
+      float: right;
+    }
+
+    #logo {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      background-color: #0E2577;
+      display: inline-block;
+      /* position: absolute; */
+      left: 50%;
+      transform: translate(150%);
+      margin: 20px
+    }
+
+    #main {
+      background-color: rgb(189, 204, 255);
+      height: 100%;
+    }
+
+    .posts {
+      width: 330px;
+      height: 250px;
+      background-color: #ffffff;
+      margin: 20px auto;
+      padding-top: 14px;
+    }
+
+    .postsImage {
+      width: 300px;
+      height: 170px;
+      border: 1px solid black;
+      margin: 0px auto;
+    }
+
+    /** (mobile) For 480px or less **/
+    @media screen and (max-width: 480px) {}
+  </style>
+</head>
+
+<body>
+  <div id="content">
+    <div id="header">
+      <div id="iconsWrapper">
+        <div id="sidebar">
+          <div class="toggle-btn" onclick="toggleSidebar()">
+            <a>
+              <span></span>
+              <span></span>
+              <span></span>
+            </a>
           </div>
-          <p>asdfasdf</p>
+          <ul>
+            <li><a href="#">Explore Posts</a></li>
+            <li><a href="#">Create a Post</a></li>
+            <li><a href="#">My Posts</a></li>
+            <li><a href="#">Log Out</a></li>
+            <li><a href="#">Account Setting</a></li>
+          </ul>
         </div>
-        <div class="posts">
-            <div class="postsImage">
-            </div>
-            <p>asdfasdf</p>
-          </div>
-          <div class="posts">
-              <div class="postsImage">
-              </div>
-              <p>asdfasdf</p>
-            </div>
+        <a href="#">
+          <div id="logo"></div>
+        </a>
+        <a href="#"><img src="../assets/icons/envelope.png" alt="message icon" class="icons" id="messageIcon" /></a>
+        <a href="#"><img src="../assets/icons/search.png" alt="search icon" class="icons" id="searchIcon" /></a>
       </div>
     </div>
-  </body>
+    <div id="main">
+      <div class="posts">
+        <div class="postsImage">
+        </div>
+        <p>asdfasdf</p>
+      </div>
+      <div class="posts">
+        <div class="postsImage">
+        </div>
+        <p>asdfasdf</p>
+      </div>
+      <div class="posts">
+        <div class="postsImage">
+        </div>
+        <p>asdfasdf</p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
