--- a/scripts/mainHome.html
+++ b/scripts/mainHome.html
@@ -1,100 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8"/>
+
+<head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Home</title>
+    <!-- <link rel="stylesheet" type="text/css" href="../style/mainHomeStyle.css" /> -->
     <style>
-      body {
-        margin: 0;
-        background-color: rgb(189, 204, 255);
-      }
-      #header {
-        background-color: #ffffff;
-        width: 100%;
-        height: 80px;
-        z-index: 20001;
-      }
-      #iconsWrapper {
-        padding: 0 10px;
-        text-align: center;
-      }
-      .icons {
-        width: 40px;
-        height: auto;
-        margin: 20px 10px;
-      }
-      #menuIcon {
-        float: left;
-      }
-      #searchIcon {
-        float: right;
-      }
-      #messageIcon {
-        float: right;
-      }
-      #logo {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background-color: #0E2577;
-        display: inline-block;
-        position: absolute;
-        left: 155px;
-        margin: 20px
-      }
-      #main {
-        background-color: rgb(189, 204, 255);
-        height: 100%;
-      }
-      .posts {
-        width: 330px;
-        height: 250px;
-        background-color: #ffffff;
-        margin: 20px auto;
-        padding-top: 14px;
-      }
+        body {
+            margin: 0;
+            background-color: rgb(189, 204, 255);
+        }
 
-      .postsImage {
-        width: 300px;
-        height: 170px;
-        border: 1px solid black;
-        margin: 0px auto;
-      }
+        #header {
+            background-color: #ffffff;
+            width: 100%;
+            height: 80px;
+            z-index: 20001;
+        }
 
-      /** (mobile) For 480px or less **/
-      @media screen and (max-width: 480px) {
+        #iconsWrapper {
+            padding: 0 10px;
+            text-align: center;
+        }
 
-      }
+        .icons {
+            width: 40px;
+            height: auto;
+            margin: 20px 10px;
+        }
+
+        #menuIcon {
+            float: left;
+        }
+
+        #searchIcon {
+            float: right;
+        }
+
+        #messageIcon {
+            float: right;
+        }
+
+        #logo {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            background-color: #0E2577;
+            display: inline-block;
+            position: absolute;
+            left: 155px;
+            margin: 20px
+        }
+
+        #main {
+            background-color: rgb(189, 204, 255);
+            height: 100%;
+        }
+
+        .posts {
+            width: 330px;
+            height: 250px;
+            background-color: #ffffff;
+            margin: 20px auto;
+            padding-top: 14px;
+        }
+
+        .postsImage {
+            width: 300px;
+            height: 170px;
+            border: 1px solid black;
+            margin: 0px auto;
+        }
+
+        /** (mobile) For 480px or less **/
+        @media screen and (max-width: 480px) {}
+
     </style>
-  </head>
-  <body>
+
+    <!-- Include Firebase related things -->
+    <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-app.js"></script>
+
+    <!-- Add Firebase products that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.2/firebase-firestore.js"></script>
+    <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
+    <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+    <script>
+        // Your web app's Firebase configuration
+        var firebaseConfig = {
+            apiKey: "AIzaSyAv-mg6O3jfsV6MBeJdXCB4zqevWrmRkVc",
+            authDomain: "bcit-buy-n-sell.firebaseapp.com",
+            databaseURL: "https://bcit-buy-n-sell.firebaseio.com",
+            projectId: "bcit-buy-n-sell",
+            storageBucket: "bcit-buy-n-sell.appspot.com",
+            messagingSenderId: "796480005879",
+            appId: "1:796480005879:web:bb2942893b85e9949555f2"
+        };
+        // Initialize Firebase
+        firebase.initializeApp(firebaseConfig);
+
+    </script>
+</head>
+
+<body>
     <div id="content">
-      <div id="header">
-        <div id="iconsWrapper">
-          <a href="#"><img src="../assets/icons/menu.png" alt="menu icon" class="icons" id="menuIcon"/></a>
-          <a href="#"><div id="logo"></div></a>
-          <a href="#"><img src="../assets/icons/envelope.png" alt="message icon" class="icons" id="messageIcon"/></a>
-          <a href="#"><img src="../assets/icons/search.png" alt="search icon" class="icons" id="searchIcon"/></a>
-        </div>
-      </div>
-      <div id="main">
-        <div class="posts">
-          <div class="postsImage">
-          </div>
-          <p>asdfasdf</p>
-        </div>
-        <div class="posts">
-            <div class="postsImage">
+        <div id="header">
+            <div id="iconsWrapper">
+                <a href="#"><img src="../assets/icons/menu.png" alt="menu icon" class="icons" id="menuIcon" /></a>
+                <a href="#">
+                    <div id="logo"></div>
+                </a>
+                <a href="#"><img src="../assets/icons/envelope.png" alt="message icon" class="icons" id="messageIcon" /></a>
+                <a href="#"><img src="../assets/icons/search.png" alt="search icon" class="icons" id="searchIcon" /></a>
             </div>
-            <p>asdfasdf</p>
-          </div>
-          <div class="posts">
-              <div class="postsImage">
-              </div>
-              <p>asdfasdf</p>
+        </div>
+        <div id="main">
+          <p id="userName"></p>
+            <div class="posts">
+                <div class="postsImage">
+                </div>
+                <p>asdfasdf</p>
             </div>
-      </div>
+            <div class="posts">
+                <div class="postsImage">
+                </div>
+                <p>asdfasdf</p>
+            </div>
+            <div class="posts">
+                <div class="postsImage">
+                </div>
+                <p>asdfasdf</p>
+            </div>
+        </div>
     </div>
-  </body>
+
+    <script>
+        console.log("[mainHome]");
+
+        var user = firebase.auth().currentUser;
+        var name, email, photoUrl, uid, emailVerified;
+
+        firebase.auth().onAuthStateChanged(function (user) {
+            if (user) {
+                // User is signed in.
+                if (user != null) {
+                    name = user.displayName;
+                    email = user.email;
+                    photoUrl = user.photoURL;
+                    emailVerified = user.emailVerified;
+                    uid = user.uid; // The user's ID, unique to the Firebase project. Do NOT use
+                    // this value to authenticate with your backend server, if
+                    // you have one. Use User.getToken() instead.
+                }
+
+                console.log(name);
+                document.getElementById("userName").innerHTML = name;
+            } else {
+                // No user is signed in.
+            }
+        });
+
+    </script>
+</body>
+
 </html>
