--- a/scripts/mainHome.html
+++ b/scripts/mainHome.html
@@ -2,85 +2,12 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../style/sidebarStyle.css">
+  <link rel="stylesheet" type="text/css" href="../style/mainHomeStyle.css">
   <script type="text/javascript" src=./sidebar_script.js></script>
   <title>Main Home</title>
-  <style>
-    body {
-      margin: 0;
-      background-color: rgb(189, 204, 255);
-    }
-
-    #header {
-      background-color: #ffffff;
-      width: 100%;
-      height: 80px;
-      z-index: 50;
-      top: 0;
-      position: fixed;
-    }
-
-    #iconsWrapper {
-      padding: 0 10px;
-      text-align: center;
-    }
-
-    .icons {
-      width: 40px;
-      height: auto;
-      margin: 20px 10px;
-    }
-
-    #menuIcon {
-      float: left;
-    }
-
-    #searchIcon {
-      float: right;
-    }
-
-    #messageIcon {
-      float: right;
-    }
-
-    #logo {
-      width: 40px;
-      height: 40px;
-      border-radius: 50%;
-      background-color: #0E2577;
-      display: inline-block;
-      /* position: absolute; */
-      left: 50%;
-      transform: translate(150%);
-      margin: 20px
-    }
-
-    #main {
-      background-color: rgb(189, 204, 255);
-      height: 100%;
-    }
-
-    .posts {
-      width: 330px;
-      height: 250px;
-      background-color: #ffffff;
-      margin: 20px auto;
-      padding-top: 14px;
-    }
-
-    .postsImage {
-      width: 300px;
-      height: 170px;
-      border: 1px solid black;
-      margin: 0px auto;
-    }
-
-    /** (mobile) For 480px or less **/
-    @media screen and (max-width: 480px) {}
-  </style>
 
   <!-- Include Firebase related things -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
