--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		</div>
 		<h1 id="title">BCIT<br/>Buy &amp; Sell</h1>
 		<div class="mainlist">
-			<p><a href="./scripts/login.html">Log In</a></p>
+			<p><a href="./src/Login/login.html">Log In</a></p>
 			<br>
-			<p><a href="./scripts/login.html">Sign Up</a></p>
+			<p><a href="./src/Login/login.html">Sign Up</a></p>
 		</div>
 		<p class="version">V 1.0</p>
 	</div>
