--- a/src/Sidebar/Sidebar.html
+++ b/src/Sidebar/Sidebar.html
@@ -25,7 +25,7 @@
 			<li><a href="#">Create a Post</a></li>
 			<li><a href="#">My Posts</a></li>
 			<li><a href="#">Log Out</a></li>
-			<li><a href="#">Account Setting</a></li>
+			<li><a href="#">Account Settings</a></li>
 		</ul>
 	</div>
 </body>
