--- a/src/MainHome/mainHome.html
+++ b/src/MainHome/mainHome.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/Sidebar/sidebarStyle.css">
   <link rel="stylesheet" type="text/css" href="../../style/MainHome/mainHomeStyle.css">
-  <script type="text/javascript" src="../../scripts/sidebar_script.js"></script>
+  <script type="text/javascript" src="../../scripts/Sidebar/sidebar_script.js"></script>
 
   <!-- Include Firebase related things -->
     <!-- Firebase App (the core Firebase SDK) is always required and must be listed first -->
