--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -62,9 +62,29 @@
             // Privacy policy url.
             privacyPolicyUrl: 'main.html'
         };
+        var user = firebase.auth().currentUser;
+        var name, email, photoUrl, uid, emailVerified;
+        var db = firebase.firestore();
+        firebase.auth().onAuthStateChanged(function (user){
+            if(user){
+                if(user != null){
+                    name = user.displayName;
+                    email = user.email;
+                    photoUrl = user.photoURL;
+                    emailVerified = user.emailVerified;
+                    uid = user.uid;
+                }
+                db.collection('users').doc(user.uid).set({
+                name: name,
+                email : email,
+                registerdDate: 
+            })
+            }
+
+        })
 
         // The start method will wait until the DOM is loaded.
-        ui.start('#firebaseui-auth-container', uiConfig);
+        ui.start('#firebaseui-auth-container', uiConfig)
 
     </script>
 </body>
