--- a/src/Login/login.html
+++ b/src/Login/login.html
@@ -62,12 +62,12 @@
             // Privacy policy url.
             privacyPolicyUrl: 'main.html'
         };
-        var user = firebase.auth().currentUser;
-        var name, email, photoUrl, uid, emailVerified;
-        var db = firebase.firestore();
-        firebase.auth().onAuthStateChanged(function (user){
-            if(user){
-                if(user != null){
+        firebase.auth().onAuthStateChanged(function (user) {
+            var user = firebase.auth().currentUser;
+            var name, email, photoUrl, uid, emailVerified;
+            var db = firebase.firestore();
+            if (user) {
+                if (user != null) {
                     name = user.displayName;
                     email = user.email;
                     photoUrl = user.photoURL;
@@ -75,17 +75,33 @@
                     uid = user.uid;
                 }
                 db.collection('users').doc(user.uid).set({
-                name: name,
-                email : email,
-                registerdDate: 
-            })
+                    name: name,
+                    email: email,
+                    registerdDate: firebase.firestore.Timestamp.fromDate(new Date()),
+                    numberOfPost: 0
+                })
             }
 
         })
 
         // The start method will wait until the DOM is loaded.
-        ui.start('#firebaseui-auth-container', uiConfig)
+        ui.start('#firebaseui-auth-container', uiConfig).then(function () {
+            firebase.auth().onAuthStateChanged(function (user) {
+                var user = firebase.auth().currentUser;
+                var name, email, photoUrl, uid, emailVerified;
+                var db = firebase.firestore();
+                if (user) {
+                    if (user != null) {
+                        name = user.displayName;
+                        email = user.email;
+                        photoUrl = user.photoURL;
+                        emailVerified = user.emailVerified;
+                        uid = user.uid;
+                    }
+                }
 
+            })
+        })
     </script>
 </body>
 
