--- a/src/MainHome/mainHome.html
+++ b/src/MainHome/mainHome.html
@@ -68,7 +68,7 @@
       </div> -->
     </div>
   </div>
-
+  <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-storage.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script type="text/javascript" src="../../scripts/MainHome/mainHome.js"></script>
 </body>
