--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 	<title></title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../style/indexStyle.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="./style/indexStyle.css">
 </head>
 <body>
 	<div class="mainpage">
@@ -14,9 +13,9 @@
 		</div>
 		<h1 id="title">BCIT<br/>Buy &amp; Sell</h1>
 		<div class="mainlist">
-			<p><a href="../src/Login/login.html">Log In</a></p>
+			<p><a href="./src/Login/login.html">Log In</a></p>
 			<br>
-			<p><a href="../src/Login/login.html">Sign Up</a></p>
+			<p><a href="./src/Login/login.html">Sign Up</a></p>
 		</div>
 		<p class="version">V 1.0</p>
 	</div>
