--- a/public/src/Sidebar/Sidebar.html
+++ b/public/src/Sidebar/Sidebar.html
@@ -14,6 +14,7 @@
 
 	<div id="sidebar">
 		<div class="toggle-btn" onclick="toggleSidebar()">
+			<!-- Side bar button -->
 			<a>
 				<span></span>
 				<span></span>
